tests/baselines/reference/classAndVariableWithSameName.errors.txt
==== tests/cases/compiler/classAndVariableWithSameName.ts (2 errors) ====
    class C { foo: string; }
    var C = ''; // error
        ~
!!! error TS2000: Duplicate identifier 'C'.
    
    module M {
        class D {
            bar: string;
        }
    
        var D = 1; // error
            ~
!!! error TS2000: Duplicate identifier 'D'.
    }